--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "moviedb",
-  "homepage": "https://h4r5h-10.github.io/moviemeter/",
+  "homepage": "https://h4r5h-10.github.io/moviemeter",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
